<resources>
    <string name="app_name">ICan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Ikan</string>
    <string name="title_notifications">Profile</string>

    <string name="greeting">Selamat Datang, \nLabib Hiba</string>
    <string name="best_seller">Penjualan Terbaik Minggu ini</string>
    <string name="dashboard">Dashboard</string>
    <string name="location">Wilayah Ikan</string>
    <string name="fish_name">Nama Ikan</string>
    <string name="price">30000</string>
    <string name="weight">15</string>
    <string name="kg">kg</string>

    <string name="error_message">Terjadi Kesalahan</string>
</resources>