<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_item_list"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardMaxElevation="2dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="130dp"
        android:layout_height="210dp">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="130dp"
            android:layout_height="115dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/fish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_location_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/location"
            android:textSize="9sp"
            android:textColor="#20c997"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_poster"
            app:drawableStartCompat="@drawable/ic_location_city"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fish_name"
            android:textSize="11sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/tv_location_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tv_location_title"
            app:layout_constraintTop_toBottomOf="@id/tv_location_title" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/price"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/weight"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="@id/tv_price"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tv_price"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/kg"
            android:textSize="8sp"
            app:layout_constraintStart_toEndOf="@id/tv_weight"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>